// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiltersTitle /> should render disabled properly 1`] = `
.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  color: #73b61c;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover svg {
  color: #d6680b;
}

<div
  className="emotion-6"
>
  <svg
    color="#73b61c"
    data-file-name="range.svg"
    width={20}
  />
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      clip.length
    </span>
  </div>
  <button
    aria-label="Enable Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#d6680b"
      data-file-name="hidden.svg"
      width={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-5"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-4"
      color="#808080"
      data-file-name="cross.svg"
      width={20}
    />
  </button>
</div>
`;

exports[`<FiltersTitle /> should render properly 1`] = `
.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  color: #73b61c;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover svg {
  color: #ffffff;
}

.emotion-2 {
  visibility: hidden;
}

<div
  className="emotion-6"
>
  <svg
    color="#73b61c"
    data-file-name="range.svg"
    width={20}
  />
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      clip.length
    </span>
  </div>
  <button
    aria-label="Disable Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      width={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="cross.svg"
      width={20}
    />
  </button>
</div>
`;

exports[`<FiltersTitle /> should render properly 2`] = `
.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  color: #73b61c;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover svg {
  color: #ffffff;
}

.emotion-2 {
  visibility: hidden;
}

<div
  className="emotion-6"
>
  <svg
    color="#73b61c"
    data-file-name="range.svg"
    width={20}
  />
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      clip.length
    </span>
  </div>
  <button
    aria-label="Disable Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      width={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="cross.svg"
      width={20}
    />
  </button>
</div>
`;

exports[`<FiltersTitle /> should render properly 3`] = `
.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  color: #73b61c;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover svg {
  color: #ffffff;
}

.emotion-2 {
  visibility: hidden;
}

<div
  className="emotion-6"
>
  <svg
    color="#73b61c"
    data-file-name="range.svg"
    width={20}
  />
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      clip.length
    </span>
  </div>
  <button
    aria-label="Disable Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      width={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="cross.svg"
      width={20}
    />
  </button>
</div>
`;
